syntax = "proto3";

package tx;

option go_package = "/tx";

// TransactionHeader defines the header for a transaction.
message TransactionHeader {
  // chainVersion determines the network and code version.
  // First byte: network (devnet, testnet, mainnet, etc.)
  // Bytes 2-4: code version
  // Reserved: 0x0 and 0xFFFFFFFF
  fixed32 chain_version = 1;

  // payloadSize defines the length of the payload block.
  // Default: 0x0 (no payload)
  // Reserved: 0xFFFF
  // Max size: 65,532 bytes
  // Total tx size: fixed header size + payload
  uint32 payload_size = 2;

  // reservedFlag is reserved for future extensions.
  // Default: 0x00
  // Reserved: 0xFF
  uint32 reserved_flag = 3;

  // opCode is the command code.
  uint32 op_code = 4;

  // authType determines the transaction authorization method.
  // 0x0: UID (default, most common)
  // 0x1: public key (ed25519)
  // 0x2: multisig (public keys and signatories in payload)
  // 0x3: other possible methods
  // Reserved: 0xFF
  uint32 auth_type = 5;

  // executionMode determines the execution mode and lifetime.
  // 0x00: default, execute in normal mode
  // 0x01: execute immediately, but before validBefore Height
  // 0x02: execute only in current block
  // 0x03: priority immediate execution, even if other txs
  // 0x04: execute strictly in next block
  // 0x05–0xFF: reserved
  uint32 execution_mode = 6;

  // reservedPadding is reserved for structure alignment.
  // Default: 0x00
  uint32 reserved_padding = 7;

  // marketCode defines the market and trading pair.
  // Default: 0x0 (global chain operation)
  // First 4 bits: market (spot, perp, futures, options, tradfi, etc.)
  // Remaining 28 bits: trading pair ID
  // Reserved: 0xFFFFFFFF
  fixed32 market_code = 8;

  // signerUID is the internal user UID of the signer.
  // 0x0 if authType > 0
  uint64 signer_uid = 9;

  // nonce is the account nonce (0 allowed for some service commands).
  uint64 nonce = 10;

  // minHeight or lastKnownHeight: last known block height by sender.
  // Tx discarded if current height is lower.
  // Default: 0x0
  uint64 min_height = 11;

  // maxHeight or validBeforeHeight: height until tx is valid.
  // Default: 0x0
  uint64 max_height = 12;

  // signature is the ed25519 signature.
  bytes signature = 13; // Fixed 64 bytes
}


// Transaction - основное сообщение для полной tx.
// Состоит из header и payload (oneof для разных типов в зависимости от opCode).
message Transaction {
  TransactionHeader header = 1;

  // Payload - oneof для типизированных сообщений.
  // Каждый тип payload соответствует конкретному opCode (валидация в коде).
  // Если payload_size == 0, то oneof пустой (nil в Go).
  oneof payload {
    // META_NOOP (opCode 0x00): Просто 1 пустой байт (например, bytes с нулевым значением).
    MetaNoopPayload meta_noop = 2;

    // META_RESERVE (opCode 0xFF): Зарезервированная, 1 байт.
    MetaReservePayload meta_reserve = 3;

    // ORD_CREATE (opCode 0x60): Создание ордера.
    OrderCreatePayload order_create = 4;

    // ORD_CANCEL (opCode 0x64): Отмена одного ордера.
    OrderCancelPayload order_cancel = 5;

    // ORD_CANCEL_BATCH (opCode 0x65): Массовая отмена.
    OrderCancelBatchPayload order_cancel_batch = 6;

    // ORD_CANCEL_ALL (opCode 0x66): Отмена всех ордеров (payload пустой, но для oneof используем пустое сообщение).
    OrderCancelAllPayload order_cancel_all = 7;

    // ORD_CANCEL_REPLACE (opCode 0x6A): Атомарная отмена и создание.
    OrderCancelReplacePayload order_cancel_replace = 8;

    // ORD_AMEND (opCode 0x6B): Изменение ордера.
    OrderAmendPayload order_amend = 9;

    // ORD_AMEND_BATCH (opCode 0x6C): Массовое изменение.
    OrderAmendBatchPayload order_amend_batch = 10;

    //... Добавляйте другие по мере необходимости.
  }
}

// MetaNoopPayload - для META_NOOP (opCode 0x00).
message MetaNoopPayload {
  bytes payload = 1; // 1 байт, default пустой (0x00)
}

// MetaReservePayload - для META_RESERVE (opCode 0xFF).
message MetaReservePayload {
  bytes payload = 1; // 1 байт, default пустой
}

// OrderID - 16 байт, UUIDv7
message OrderID {
  bytes id = 1; // Фиксированные 16 байт.
}

// OrderCreatePayload - для ORD_CREATE (opCode 0x60).
message OrderCreatePayload {
  OrderID 		order_id 	= 1;	// OrderID - 16 байт, UUIDv7
  bool 			is_buy 		= 2;	// Buy/Sell side.
  bool 			is_market 	= 3;	// true: рыночный ордер, false: лимитный.
  uint64 		quantity 	= 4;	// Объем в base units.
  uint64 		price 		= 5;	// Цена в quote units (игнорируется для market).
  uint32 		flags 		= 6;	// Флаги: битовые (e.g., bit0: GTD, bit1: IOC, etc.). Определите маску в коде.
  // uint64 timestamp 		= 7;	// Опционально, если нужен (e.g., для GTD expiration), но пока закомментировано.
}

// OrderCancelPayload - для ORD_CANCEL (opCode 0x64).
message OrderCancelPayload {
	OrderID 		order_id 	= 1;	// OrderID - 16 байт, UUIDv7
}

// OrderCancelBatchPayload - для ORD_CANCEL_BATCH (opCode 0x65).
message OrderCancelBatchPayload {
	repeated OrderID order_ids = 1;            // Массив orderID (каждый 16 байт)
}

// OrderCancelAllPayload - для ORD_CANCEL_ALL (opCode 0x66).
message OrderCancelAllPayload {
	bytes payload = 1; // 1 байт, default пустой
}

// OrderCancelReplacePayload - для ORD_CANCEL_REPLACE (opCode 0x6A).
message OrderCancelReplacePayload {
  OrderID 		order_id 	= 1;	// OrderID - 16 байт, UUIDv7
  // Затем создание нового (аналогично OrderCreatePayload).
  bool 			is_buy 		= 2;	// Buy/Sell side.
  bool 			is_market 	= 3;	// true: рыночный ордер, false: лимитный.
  uint64 		quantity 	= 4;	// Объем в base units.
  uint64 		price 		= 5;	// Цена в quote units (игнорируется для market).
  uint32 		flags 		= 6;	// Флаги: битовые (e.g., bit0: GTD, bit1: IOC, etc.). Определите маску в коде.
  OrderID 		new_order_id 		= 7; 	// Новый ордер
}

// OrderAmendPayload - для ORD_AMEND (opCode 0x6B).
message OrderAmendPayload {
  OrderID 		order_id 	= 1;	// OrderID - 16 байт, UUIDv7
  // Изменяемые поля (опционально, если не указано - не менять).
  optional uint64 quantity 	= 2;
  optional uint64 price 	= 3;
}

// OrderAmendBatchPayload - для ORD_AMEND_BATCH (opCode 0x6C).
// Для каждого ордера: ID + изменения.
message OrderAmendBatchPayload {
  message AmendItem {
    OrderID 		order_id 	= 1;	// OrderID - 16 байт, UUIDv7
    optional uint64 quantity 	= 2;
    optional uint64 price 		= 3;
  }
  repeated AmendItem amends = 1;
}
